Upgrade to java 11, update deps and refractor